--- a/style.css
+++ b/style.css
@@ -6,10 +6,14 @@
 #author{
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
 }
 
 #add{
     display: flex;
     flex-direction: column;
+    margin-top: 10px;
 }
+
+
 
